fix: restore bigger gap between search input and filter label
also removes CSS rule selectors that are now dead due to componentisation

--- a/src/action/configuration.css
+++ b/src/action/configuration.css
@@ -22,6 +22,10 @@ label[for="filter"] {
   margin-left: 2ch;
 }
 
+#filter {
+  margin-left: 1ch;
+}
+
 .no-results {
   display: none;
   justify-content: center;
